# tower-eval

./: .gitignore  Makefile  README.md  pyproject.toml  run_blogpost_benchmark.sh  run_paper_benchmark.sh  run_reference_benchmark.sh
configs/blogpost/: 5_shot_ape.yaml  5_shot_gec.yaml  5_shot_mt.yaml  openai_ape.yaml  openai_ner.yaml
configs/blogpost/open_ai/: openai_ape_gpt_4.yaml  openai_mt.yaml
configs/blogpost/tower_instruct/: tower_instruct_0_shot.yaml  tower_instruct_5_shot.yaml
configs/examples/: deepl_gen_eval.yaml  evaluate.yaml  gen_eval.yaml  generate.yaml  index.yaml  lm_harness.yaml  prepare.yaml  prepare_random.yaml  prepare_similarity.yaml  vertex_ai_mt.yaml
configs/reference_benchmark/: 0_shot_wmt23.yaml  standard_benchmarks.yaml
configs/tower_paper/: 0_shot_openai.yaml  5_shot_generic_models.yaml  5_shot_openai.yaml  tower_instruct_0_shot.yaml  tower_instruct_5_shot.yaml
tower_eval/: cli.py  error_span_utils.py  fewshot_retrieval_utils.py  utils.py
tower_eval/metrics/: __init__.py  error_span_detection.py  exceptions.py  metrics_handler.py  tydiqa.py
tower_eval/metrics/accuracy/: metric.py  result.py
tower_eval/metrics/base/: comet.py  error_span_detection.py  metrics_handler.py  metricx.py  result_handler.py  xml_metric.py
tower_eval/metrics/bleu/: metric.py  result.py
tower_eval/metrics/bleurt/: metric.py  result.py
tower_eval/metrics/chrf/: metric.py  result.py
tower_eval/metrics/comet/: __init__.py  metric.py  result.py
tower_eval/metrics/comet_kiwi/: __init__.py  metric.py  result.py
tower_eval/metrics/comet_kiwi_23_xxl/: __init__.py  metric.py  result.py
tower_eval/metrics/errant/: metric.py  result.py
tower_eval/metrics/error_span_detection_f1/: metric.py  result.py
tower_eval/metrics/error_span_detection_precision/: metric.py  result.py
tower_eval/metrics/error_span_detection_recall/: metric.py  result.py
tower_eval/metrics/f1/: metric.py  result.py
tower_eval/metrics/f1_sequence/: conlleval.py  metric.py  result.py
tower_eval/metrics/metricx/: metric.py  result.py
tower_eval/metrics/metricx_24/: metric.py
tower_eval/metrics/metricx_large/: metric.py
tower_eval/metrics/metricx_qe/: metric.py
tower_eval/metrics/metricx_qe_large/: metric.py
tower_eval/metrics/metricx_qe_xxl/: metric.py  result.py
tower_eval/metrics/metricx_xxl/: metric.py  result.py
tower_eval/metrics/pearson/: metric.py  result.py
tower_eval/metrics/perplexity/: metric.py  result.py  vllm_subprocess.py
tower_eval/metrics/spearman/: metric.py  result.py
tower_eval/metrics/ter/: metric.py  result.py
tower_eval/metrics/tydiqa_exact_match/: metric.py
tower_eval/metrics/tydiqa_f1/: metric.py
tower_eval/metrics/xcomet/: metric.py  result.py
tower_eval/models/: __init__.py  exceptions.py  inference_handler.py
tower_eval/tasks/: __init__.py  evaluate.py  generate.py  index.py  prepare.py
tower_eval/tools/: run_calame.py
(+41 files in other folders)
