[tool.poetry]
name = "tower-eval"
version = "0.1.0"
description = "LLM generation and evaluation repository for MT and related tasks (e.g., APE, NER, GEC)."
authors = [
    "Amin Farajian <amin@unbabel.com>",
    "José Pombal <jose.pombal@unbabel.com>"
    ]
maintainers = [
    "Amin Farajian <amin@unbabel.com>",
    "José Pombal <jose.pombal@unbabel.com>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
sacrebleu = {extras = ["ko", "ja"], version = "^2.3.1"}
mecab-ko = "^1.0.0"
errant = ">=2.3.3"
unbabel-comet = {git = "https://github.com/Unbabel/COMET.git", branch = "master"}
loguru = "^0.7"
tenacity = "^8.2"
jinja2 = "^3.1"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
spacy = "^3.7.2"
nltk = "^3.8.1"
mosestokenizer = "^1.2.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
bleurt-pytorch = {git = "https://github.com/lucadiliello/bleurt-pytorch.git"}
google-cloud-aiplatform = "^1.40.0"
metricx = {git = "https://github.com/ricardorei/metricx.git"}
vllm = "^0.6.4"
anthropic = "^0.40.0"
cohere = "^5.13.3"

[tool.poetry.dev-dependencies]
mock = ">=3.0.5,<4.0.0"
coverage = ">=5.5.0,<6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
